# policyengine-api-v2-alpha

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  import_state_datasets.py  pyproject.toml
.claude/skills/: database-migrations.md
.github/scripts/: health-check.sh  modal-deploy-versioned.sh  modal-extract-versions.sh  modal-setup-environments.sh  modal-sync-secrets.sh  update-package.sh
.github/workflows/: db-reseed.yml  db-reset.yml  deploy.yml  docs.yml  test.yml  update-country-packages.yml  versioning.yml
alembic/: env.py
alembic/versions/: 20260204_0001_initial_schema.py  20260204_0002_add_household_support.py  20260204_0003_add_parameter_values_indexes.py  20260204_a17ac554f4aa_add_parameter_values_indexes.py  20260204_d6e30d3b834d_initial_schema.py  20260205_0002_add_user_policies.py  20260205_c7254ea1c129_add_user_policies.py  20260206_0004_add_variable_default_value.py  20260207_36f9d434e95b_initial_schema.py  20260207_f419b5f4acba_add_household_support.py  20260210_add_regions_table.py  20260218_add_simulation_filter_columns.py  20260218_drop_parent_report_id.py  20260218_merge_user_policies_and_household_support.py  20260219_621977f3b1aa_add_user_simulation_associations_table.py  20260219_9daa015274dd_add_user_report_associations_table.py  20260220_75e5dca14603_add_intra_decile_impacts_table.py  20260220_83ceeb90bd74_add_constituency_impacts_table.py  20260220_8d54837f0fcd_add_decile_type_to_intra_decile_impacts.py  20260220_a4ee5758d272_add_local_authority_impacts_table.py  20260220_a5e4144467e5_add_congressional_district_impacts_table.py  20260220_e243279f952f_add_budget_summary_table.py  20260227_963e91da9298_add_region_id_to_simulations.py  20260303_886921687770_region_datasets_join_table_and_.py  20260303_add_modelled_policies_to_tax_benefit_models.py  20260305_0cbd97809414_add_adds_subtracts_to_variables.py  20260305_add_variable_label.py  20260308_add_filter_strategy_column.py  20260309_62385cd8049d_rename_tax_benefit_model_name_to_.py  20260310_67608331ee8a_add_parameter_nodes_table.py  20260310_f887cb5490bc_add_execution_deferred_to_reportstatus.py  (+4 more)
changelog.d/: 124.added.md  133.changed  134.fixed  135.added  137.changed  144.fixed.md  147.fixed.md  149.fixed.md  201.added.md  201.changed.md  201.removed.md  208.fixed  215.fixed.md  256.fixed.md  265.fixed.md  267.fixed.md  271.fixed.md  272.fixed.md  273.fixed.md  276.fixed.md  363.fixed.md  364.fixed.md  365.fixed.md  bump-policyengine-3.2.1.fixed  bump-uk-version.fixed  bundle-metadata.changed.md  db-reset-flag.fixed  fix-seed-json.fixed.md  fix-seed-tuple-unpack.fixed  fix-staging-tests-redirect.fixed  fix-tagged-url-extraction.fixed  harden-public-api-write-and-compute-routes.fixed.md  household-association-reassignment.added.md  increase-startup-probe.fixed  modal-env-fix.fixed  policyengine-dep.fixed  policyengine-uk-2.75.3.changed.md  policyengine-uk-2.75.4.changed.md  policyengine-uk-2.77.0.changed.md  policyengine-uk-2.77.5.changed.md  (+194 more)
docs/: .env.example  AGENT_TESTING.md  COUNTRY_PACKAGE_VERSIONING.md  DEPLOYMENT.md  DEPLOYMENT_IMPROVEMENTS.md  DESIGN.md  ENV_VARS.md  PR_PIPELINE_AND_TESTING.md  SETUP_RUNBOOK.md  api-reference.md  api-v2-alpha-architecture.md  architecture.md  example.md  next.config.ts  package-lock.json  package.json  policy-ingredient-status.md  supabase-migration-notes.md  supabase-setup.md
scripts/: create_tables.py  get-api-ip.sh  init.py  seed.py  seed_common.py  seed_datasets.py  seed_models.py  seed_nevada.py  seed_policies.py  seed_regions.py  seed_uk_datasets.py  seed_uk_model.py  seed_us_datasets.py  seed_us_model.py  seed_utils.py  test-versioned-modal-cloud.sh  test-versioned-modal-local.sh  test_economy_simulation.py  test_household_impact.py  test_household_scenarios.py  update_version_registry.py
supabase/: config.toml
terraform/: deploy.sh  iam.tf  main.tf  outputs.tf  variables.tf
test_fixtures/: fixtures_analysis.py  fixtures_economic_impact_response.py  fixtures_household_analysis.py  fixtures_households.py  fixtures_intra_decile.py  fixtures_parameters.py  fixtures_policy_reform.py  fixtures_regions.py  fixtures_simulations_standalone.py  fixtures_strategy_reconstruction.py  fixtures_user_household_associations.py  fixtures_user_policies.py  fixtures_user_report_associations.py  fixtures_user_simulation_associations.py  fixtures_variables.py  fixtures_version_filter.py
tests/: conftest.py  test__given_dataset_id__then_region_is_none.py  test__given_existing_simulation__then_reuses_existing.py  test__given_invalid_region__then_404_error.py  test__given_region_with_filter__then_filter_params_included.py  test__given_region_without_filter__then_filter_params_none.py  test__given_same_params__then_deterministic_id.py  test_agent.py  test_agent_auth.py  test_agent_cache_thread_safety.py  test_agent_policy_questions.py  test_agent_results.py  test_agent_sandbox.py  test_agent_sandbox_path_encoding.py  test_analysis.py  test_analysis_advanced.py  test_analysis_household_impact.py  test_analysis_options.py  test_analysis_rerun.py  test_analysis_rerun_auth.py  test_axes.py  test_batch_size_caps.py  test_bundle_metadata.py  test_change_aggregates.py  test_computation_modules.py  test_datasets.py  test_demo.py  test_dynamics.py  test_economic_impact_response.py  test_economy_custom.py  test_health.py  test_household.py  test_household_calculation.py  test_household_dtype_validation.py  test_household_entity_caps.py  test_household_impact.py  test_household_job_request_data.py  test_households.py  test_integration.py  test_intra_decile.py  (+36 more)
(+152 files in other folders)
