[project]
name = "policyengine-api-v2"
version = "0.1.0"
description = "FastAPI service for PolicyEngine microsimulations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.10",
    "supabase>=2.10.0",
    "storage3>=0.8.1",
    # IMPORTANT: Before merging app-v2-migration into main, replace this git
    # dependency with the production PyPI version of policyengine (e.g., "policyengine>=X.Y.Z").
    # The git ref is used here because the app-v2-migration branch contains fixes
    # (US reform application, regions support) not yet released to PyPI.
    "policyengine @ git+https://github.com/PolicyEngine/policyengine.py.git@app-v2-migration",
    "policyengine-uk>=2.0.0",
    "policyengine-us>=1.0.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "rich>=13.9.4",
    "tables>=3.10.2",
    "logfire[fastapi,httpx,sqlalchemy]>=0.60.0",
    "fastapi-cache2>=0.2.1",
    "boto3>=1.41.1",
    "fastapi-mcp>=0.4.0",
    "modal>=0.68.0",
    "anthropic>=0.40.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "ruff>=0.7.4",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/policyengine_api"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Tool descriptions need to be long

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external services (API keys, databases)",
    "slow: tests that take a long time to run",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
